--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,7 +2,6 @@ keycloak.realm=keycloak-nuxt-demo
 keycloak.auth-server-url=http://localhost:8180/auth
 keycloak.ssl-required=external
 keycloak.bearer-only=true
-keycloak.resource=nuxt
-keycloak.credentials.secret=11111111-1111-1111-1111-111111111111
+keycloak.resource=keycloak-nuxt-demo-backend
 keycloak.security-constraints[0].authRoles[0]=user
 keycloak.security-constraints[0].securityCollections[0].patterns[0]=/api/*
