--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "@nuxtjs/auth": "^4.8.4",
     "@nuxtjs/axios": "^5.8.0",
     "@nuxtjs/proxy": "^1.3.3",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "querystring": "^0.2.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
