--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
-    "@nuxtjs/auth": "^4.8.4",
+    "@nuxtjs/auth": "https://github.com/nuxt-community/auth-module.git#feat/refresh",
     "@nuxtjs/axios": "^5.8.0",
     "@nuxtjs/proxy": "^1.3.3",
     "nuxt": "^2.0.0",
